[package]
name = "weather_gov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = { git = "https://github.com/rust-lang/log" }
log = "0.4.21"
colog = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.7"
serde_json = "1.0.115"
reqwest = { version="0.12.2",  features = ["blocking", "json"] }
futures = "0.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1.0.0", features = ["full"] }
