[package]
name = "weather_gov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = { git = "https://github.com/rust-lang/log" }
log = { version="0.4.21" }
colog = { version="1.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8.7" }
serde_json = { version="1.0.115" }
reqwest = { version="0.12.2",  features = ["blocking", "json"] }
futures = { version="0.3" }
async-std = { version="1.12", features = ["attributes", "tokio1"] }
sqlx = {version = "0.7.4", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
#async-std = "1.12"
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros"]}
#tokio = { version="1.0.0", features = ["full"] }
#mysql = {version="24.0.0" }
#mysql = "*" 
